# GTM

./: .gitignore  AI GTM Engineer Intern  Take-Home Challenge.docx  README.md
gtm-intel-engine/: .env.example  Makefile  README.md  docker-compose.yml
gtm-intel-engine/backend/: Dockerfile  pyproject.toml
gtm-intel-engine/backend/src/: app.py  db.py  deps.py  schemas.py  settings.py
gtm-intel-engine/backend/src/routers/: accounts.py  alerts.py  health.py  ingest.py  outreach.py  score.py  signals.py
gtm-intel-engine/backend/src/services/alerts/: dispatcher.py
gtm-intel-engine/backend/src/services/collectors/: clearbit.py  github.py  reddit.py  web_docs.py
gtm-intel-engine/backend/src/services/nlp/: embed.py  llm.py  prompts.py  rank.py
gtm-intel-engine/backend/src/services/outreach/: generator.py
gtm-intel-engine/backend/src/services/outreach/templates/: call.md  email.md  linkedin.md  video.md
gtm-intel-engine/backend/src/services/scoring/: account_scorer.py  feature_builder.py  rules.yaml
gtm-intel-engine/backend/src/services/signals/: auth_gaps.py  base.py  custom_template.py  hiring_initiatives.py  identity_risks.py  soc2_gaps.py
gtm-intel-engine/backend/src/workers/: celery_app.py  tasks.py
gtm-intel-engine/backend/tests/: test_collectors.py  test_outreach.py  test_scoring.py  test_signals.py
gtm-intel-engine/backend/tests/fixtures/: firmo.json
gtm-intel-engine/frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
gtm-intel-engine/infra/: init.sql
(+15 files in other folders)
