[tool.poetry]
name = "gtm-intel-engine"
version = "0.1.0"
description = "AI-powered GTM engine: collectors, signals, scoring, outreach, alerts"
authors = ["GTM Team <gtm@example.com>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
SQLAlchemy = "^2.0.30"
psycopg = {version = "^3.1.19", extras = ["binary"]}
redis = "^5.0.4"
celery = "^5.3.6"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
httpx = "^0.27.0"
beautifulsoup4 = "^4.12.3"
playwright = "^1.45.0"
rank-bm25 = "^0.2.2"
openai = "^1.35.7"
pgvector = "^0.2.5"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
